data/derived/comb/progs/unify/prog8557.ml.out
Characters 104-107:
  | Sine sin -> "sin(pi*"^ (eval sin x y) ^")" 
                                 ^^^
Error: This expression has type expr but an expression was expected of type
         expr * ('a -> 'b -> 'c) * ('a -> 'b -> 'c)
